# mcim-model

./: Cargo.toml  README.md
mcim-model/: Cargo.toml
src/: curseforge.rs  lib.rs  modrinth.rs  translate.rs
