[package]
name = "mcim-models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15.0", features = ["chrono_0_4"] }
bson = { version = "3.0.0", features = ["chrono-0_4", "serde_with-3", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
